@@ -19,8 +19,7 @@
 		private $text			= null;
 		private $subject		= null;
 		private $from			= null;
-		private $siteEncoding	= null;
-		private $mailEncoding	= null;
+		private $encoding	= null;
 		
 		public static function create()
 		{
@@ -31,38 +30,52 @@
 		{
 			if (empty($this->to))
 				throw new WrongArgumentException("mail to: is not specified");
+				
+			$siteEncoding = mb_get_info('internal_encoding');
+			
+			if (! $this->encoding 
+				|| $this->encoding == $siteEncoding
+			) {
+				$encoding = $siteEncoding;
+				$to = $this->to;
+				$from = $this->from;
+				$subject =
+					 "=?".$encoding."?B?"
+					 .base64_encode($this->subject)
+					 ."?=";
+				$body = $this->text;
+				
+			} else {
+				$encoding = $this->encoding;
+				$to = mb_convert_encoding($this->to, $encoding);
+				$from = mb_convert_encoding($this->from, $encoding);
+	
+				$subject =
+					 "=?".$encoding."?B?"
+					 .base64_encode(
+					 	iconv(
+					 		$siteEncoding,
+					 		$encoding.'//TRANSLIT',
+					 		$this->subject
+					 	)
+					 )."?=";
+					 
+				$body = iconv(
+					$siteEncoding,
+					$encoding.'//TRANSLIT', 
+					$this->text
+				);
+			}
 
-			$this->to = mb_convert_encoding($this->to, $this->mailEncoding);
-			$this->from = mb_convert_encoding($this->from, $this->mailEncoding);
-
-			$to = $this->to;
-
-			$subject =
-				 "=?".$this->mailEncoding."?B?"
-				 .base64_encode(
-				 	iconv(
-				 		$this->siteEncoding,
-				 		$this->mailEncoding
-				 			.'//TRANSLIT',
-				 		$this->subject
-				 	)
-				 )."?=";
-				 
 			$headers = '';
 			if (!empty($this->from)) {
 				$headers .= "From: ".$this->from."\n";
 				$headers .= "Return-Path: ".$this->from."\n";
 			}
 			$headers .= "MIME-Version: 1.0\n";
-			$headers .= "Content-type: text/html; charset=".$this->mailEncoding."\n";
+			$headers .= "Content-type: text/html; charset=".$encoding."\n";
 			$headers .= "Content-Transfer-Encoding: 8bit\n";
 			$headers .= "Date: ".date('r')."\n";
-			
-			$body = iconv(
-				$this->siteEncoding,
-				$this->mailEncoding.'//TRANSLIT', 
-				$this->text
-			);
 
 			if (!mail($to, $subject, $body, $headers))
 				throw new MailNotSentException();
@@ -92,15 +105,9 @@
 			return $this;
 		}
 		
-		public function setSiteEncoding($siteEncoding)
+		public function setEncoding($encoding)
 		{
-			$this->siteEncoding = $siteEncoding;
-			return $this;
-		}
-		
-		public function setMailEncoding($mailEncoding)
-		{
-			$this->mailEncoding = $mailEncoding;
+			$this->encoding = $encoding;
 			return $this;
 		}
 	}
